styles/styles.css
/* ... */
@keyframes dots-bounce {
  0%,
  80%,
  100% {
    @apply scale-0 opacity-40;
  }
  40% {
    @apply scale-100 opacity-100;
  }
}

/* PACKAGE STICKY CONTAINER */

#metadataContainer {
  top: 26px;
  height: fit-content;
  position: sticky;
}

/* README WRAPPER */

#readmeMarkdownContainer {
  font-size: 90%;
  line-height: 1.4;

  *:first-child {
    margin-top: 0;
  }

  *:last-child {
    margin-bottom: 0;
  }

  section {
    margin-top: 18px;
  }

  img {
    margin-top: 12px;
  }

  img + img {
    margin-top: 8px;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: 12px;
    margin-bottom: 0;
    display: flex;
    gap: 6px;
    align-items: center;

    & a {
      font-size: inherit;
    }

    & img {
      display: block;
    }

    &[align='center'] img {
      margin: 0 auto;
    }

    + div {
      margin-top: 12px;
    }

    a[href^='#'] {
      display: none;
    }

    &:hover {
      a[href^='#'] {
        display: flex;
      }
    }
  }

  p {
    margin-bottom: 0;

    &[align='center'] {
      picture {
        display: block;
      }
    }

    & a {
      font-size: inherit;
    }
  }

  a {
    display: inline-flex;
    align-items: baseline;
    font-weight: inherit;
  }

  a:has(img) {
    text-decoration: none !important;
  }

  a:has(code) {
    font-size: 100%;
  }

  code,
  pre,
  a {
    white-space: pre-wrap;
    word-break: auto-phrase;
  }

  code {
    font-size: 110%;
    background-color: var(--inline-code-background);
    border-radius: 4px;
    padding: 1px 4px;
  }

  pre {
    margin-bottom: 0;

    code {
      background-color: unset;
      border-radius: unset;
      padding: unset;
    }

    &.shiki {
      border-radius: 6px;
      padding: 12px 32px 12px 16px;
      background-color: var(--code-block-background) !important;
    }
  }

  picture {
    display: contents;
  }

  img {
    max-width: 100%;

    &:not([width]) {
      width: min-content;
    }
  }

  blockquote {
    margin-block-start: 8px;
    margin-block-end: 0;
    margin-inline-start: 0;
    padding-inline-start: 1rem;
    padding-block-start: 0.25rem;
    padding-block-end: 0.25rem;
    border-left-width: 3px;
    border-left-style: solid;

    .blockquote-title {
      font-weight: 600;
      margin-bottom: -4px;
      display: block;
    }

    &.note {
      border-left-color: #4493f8;

      .blockquote-title {
        color: #4493f8;
      }
    }

    &.tip {
      border-left-color: #238636;

      .blockquote-title {
        color: #238636;
      }
    }

    &.important {
      border-left-color: #ab7df8;

      .blockquote-title {
        color: #ab7df8;
      }
    }

    &.warning {
      border-left-color: #9e6a03;

      .blockquote-title {
        color: #9e6a03;
      }
    }

    &.caution {
      border-left-color: #da3633;

      .blockquote-title {
        color: #da3633;
      }
    }
  }

  ul,
  ol {
    margin-inline-start: 0.75rem;
    padding-inline-start: 1rem;
    margin-bottom: 0;

    ul,
    ol {
      padding-block: 4px;
      margin-inline-start: 0;
    }
  }

  li {
    div:last-child {
      margin-bottom: 8px;
    }

    pre {
      margin-top: 8px !important;
    }
  }

  details {
    background-color: var(--table-alt-row);
    padding-inline-start: 1rem;

    summary {
      margin-top: 8px !important;
      cursor: pointer;
    }
  }

  div[data-table-wrapper] {
    max-width: 100%;
    width: fit-content;
    overflow-x: auto;
    border-radius: 9px;
    border: 1px solid var(--table-border);
  }

  table {
    margin-top: 8px;
    border-collapse: collapse;
    width: fit-content;

    a:has(img) {
      display: inline-block;
      text-align: inherit;
    }

    p {
      margin-top: 8px;
    }

    sub,
    sup {
      text-align: inherit;
    }

    li {
      &:last-child {
        margin-bottom: 0;
      }
    }

    .readme-code-block {
      &:first-child {
        margin-top: 2px !important;
      }

      &:last-child {
        margin-bottom: 2px;
      }
    }
  }

  tr {
    &:first-child {
      td,
      th {
        border-top: 0;
      }
    }

    &:last-child {
      td {
        border-bottom: 0;
      }
    }

    &:nth-child(2n) {
      background-color: var(--table-alt-row);
    }
  }

  td,
  th {
    border: 1px solid var(--table-border);
    padding: 5px 8px;

    &:first-child {
      border-left: 0;
    }

    &:last-child {
      border-right: 0;
    }
  }

  th {
    background-color: var(--table-header-background);
  }
}

